--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-Flask
+Flask==1.1.2
+numpy==1.21.5
+pandas==1.4.2
+scikit_learn==1.1.3
+tensorflow==2.10.0
 Gunicorn
-numpy
-tensorflow
-scikit-learn
-pandas
-
